--- a/app/views/layouts/store/application.html.erb
+++ b/app/views/layouts/store/application.html.erb
@@ -10,11 +10,11 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
   <%= stylesheet_link_tag     'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_pack_tag     'store', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag     'store' %>
 
   <%= csrf_meta_tags %>
 </head>
-<body class="shop <%= "#{controller_name} #{action_name}" %>">
+<body class="shop <%= "#{controller_name} #{action_name}" %>" id="shop_app">
   <nav class="shop">
     <div class="level">
       <div class="level-left">
@@ -39,7 +39,7 @@
 
   <script src="https://www.paypal.com/sdk/js?client-id=<%= ENV['paypal_client_id'] %>">
     // Required. Replace SB_CLIENT_ID with your sandbox client ID.
-  </script>
+  </script> 
   <script>
     paypal.Buttons({
       env: 'sandbox', // Valid values are 'sandbox' and 'live'.
@@ -68,7 +68,7 @@
         }
       }
     }).render('#paypal-button-container');
-  </script>   
+  </script>     
 </body>
 
 
