--- a/app/views/store/products/index.html.erb
+++ b/app/views/store/products/index.html.erb
@@ -1,3 +1,3 @@
-<div class="products">
+<div class="products" id="store-list">
   <%= render partial: "product", collection: @products, as: :product %>
 </div>
