--- a/app/views/store/products/_product.html.erb
+++ b/app/views/store/products/_product.html.erb
@@ -30,6 +30,7 @@
                 currency-code="<%= product.price_currency %>"
                 price-cents="<%= product.price_cents %>"
                 product-description="<%= product.name %>"
+                product-id="<%= product.id %>"
               />
 
               <% if product.description.present? && action_name != "shop_show"%>
