--- a/app/views/store/products/index.html.erb
+++ b/app/views/store/products/index.html.erb
@@ -1,3 +1,12 @@
-<div class="products" id="store-list">
-  <%= render partial: "product", collection: @products, as: :product %>
+<div class="section section-demo"id="store-list">
+  <div class="container">
+    <%= render partial: "product", collection: @products, as: :product %>
+  </div>
 </div>
+
+<style type="text/css">
+.product-display-picture img {
+  width: 100%;
+  height: 500px; /* only if you want fixed height */  
+}
+</style>
