--- a/app/views/store/purchases/success.html.erb
+++ b/app/views/store/purchases/success.html.erb
@@ -1,12 +1,20 @@
 <div class="jumbotron text-center" id="payment-success-message">
-  <h1 class="display-3">Payment is Successful</h1>
+  <h1 class="display-3">Your Payment is Successful</h1>
   <p><%= money_without_cents_and_with_symbol @purchase.price %></p>
-  <p class="lead"><strong>Thank you! Please check your email</strong> for further instructions on how to access your purchase.</p>
-  <hr>
-  <p>
-    Having trouble? Please <a href=""> contact us</a>
+  <p class="lead">
+    <strong>Thank you! Please click the button below </strong> for further instructions on how to access your purchase.
   </p>
   <p class="lead">
-    <a class="btn btn-primary btn-sm" href="https://bootstrapcreative.com/" role="button">Continue to homepage</a>
+    <%=
+      link_to 'Continue to your purchase page',
+              store_purchase_path(@purchase),
+              class: "btn btn-primary btn-lg"
+    %>
   </p>
+  <br>
+  <hr>
+  <p>
+    Having trouble? 
+    Please <a href="mailto:galih.rubyist@gmail.com?subject=Trouble after successful payment">contact Us</a>
+  </p>  
 </div>
