--- a/app/views/store/products/index.html.erb
+++ b/app/views/store/products/index.html.erb
@@ -1,4 +1,7 @@
-<div class="section section-demo"id="store-list">
+<div
+  class="section section-demo"
+  id="store-list"
+>
   <div class="container">
     <%= render partial: "product", collection: @products, as: :product %>
   </div>
