--- a/app/views/layouts/store/application.html.erb
+++ b/app/views/layouts/store/application.html.erb
@@ -53,5 +53,12 @@
       </div>
     </div>
   </footer>
+
+  <script
+    id="paypal-sdk-js-src"
+    src="https://www.paypal.com/sdk/js?client-id=<%= ENV['paypal_client_id'] %>"
+    data-sdk-integration-source="button-factory"
+  >
+  </script>
 </body>
 </html>
