--- a/app/views/store/products/index.html.erb
+++ b/app/views/store/products/index.html.erb
@@ -1,3 +1,8 @@
-<div class="products">
-  <%= render partial: "product", collection: @products, as: :product %>
+<div
+  class="section section-demo"
+>
+  <!-- TODO: add id on the div -->
+  <div class="container">
+    <%= render partial: "product", collection: @products, as: :product %>
+  </div>
 </div>
