--- a/app/views/layouts/store/application.html.erb
+++ b/app/views/layouts/store/application.html.erb
@@ -15,61 +15,62 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="shop <%= "#{controller_name} #{action_name}" %>" id="shop_app">
-  <nav class="shop">
-    <div class="level">
-      <div class="level-left">
-        <div class="level-item">
-          <p class="is-size-5">
-            <%= link_to "Shop", root_path %>
-          </p> 
+  <!--Navbar-->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+
+      <!-- Collapse button -->
+      <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+
+        <!-- Links -->
+        <ul class="navbar-nav">
+
+          <li class="nav-item">
+            <%= link_to ENV['store_name'], root_path, class: 'navbar-brand' %>
+          </li>
+
+          <li class="nav-item">
+            <!-- <a class="nav-link" href="#"></a> -->
+          </li>
+
+        </ul>
+        <!-- Links -->
+      </div>
+      <!-- CTA -->
+    </div>
+
+  </nav>
+  <!--/.Navbar-->
+
+  <div class="container" id="store-content">
+    <%= yield %>
+  </div>
+
+  <footer class="footer">
+    <div class="container">
+      <nav class="pull-left">
+        <ul>
+          <li>
+            <%= link_to 'Store', root_path %>
+          </li>
+          <li>
+            <%= link_to 'About', '/#' %>
+          </li>
+        </ul>
+      </nav>
+      <div class="social-area float-right">
+        <div class="copyright">
+            &copy; 2020 <a href="https://rubyist.info">Galih Muhammad</a>, made with love
         </div>
       </div>
-      <div class="level-right">
-        <div class="level-item"></div>
-      </div>
     </div>
-  </nav>
-
-  <%= yield %>
-
-  <footer>
-    Copyright &copy; <%= Time.current.year %> <%= ENV['shop_name'] %>
-  </footer>
-
-
-  <script src="https://www.paypal.com/sdk/js?client-id=<%= ENV['paypal_client_id'] %>">
-    // Required. Replace SB_CLIENT_ID with your sandbox client ID.
-  </script> 
-  <script>
-    paypal.Buttons({
-      env: 'sandbox', // Valid values are 'sandbox' and 'live'.
-      createOrder: async (data) => {
-        const response      = await fetch('/api/v1/store/purchases', {
-          method:   'POST',
-          headers:  { 'Content-Type': 'application/json' },
-        });
-        const responseData  = await response.json();
-
-        return responseData.token;        
-      },
-      onApprove: async (data) => {
-        const response = await fetch('/api/v1/store/purchases/capture', {
-          method:   'POST',
-          headers:  { 'Content-Type': 'application/json' },
-          body:     JSON.stringify({ paypal_order_id: data.orderID })
-        });
-        
-        const responseData = await response.json();
-
-        if (responseData.status === 'COMPLETED') {
-          window.location.href = '/store/purchases/' + responseData.purchase_code + '/success';
-        } else {
-          window.location.href = '/store/purchases/failure?purchase_code=' + responseData.purchase_code;
-        }
-      }
-    }).render('#paypal-button-container');
-  </script>     
+  </footer>    
 </body>
-
 
 </html>
