--- a/app/views/layouts/store/application.html.erb
+++ b/app/views/layouts/store/application.html.erb
@@ -70,7 +70,30 @@
         </div>
       </div>
     </div>
-  </footer>    
+  </footer>
+
+    <script
+    id="paypal-sdk-js-src"
+    src="https://www.paypal.com/sdk/js?client-id=<%= ENV['paypal_client_id'] %>"
+    data-sdk-integration-source="button-factory"
+  >
+  </script>
+  <script>
+    paypal.Buttons({
+      env: 'sandbox', // Valid values are sandbox and live.
+      createOrder: function(data, actions) {
+        // This function sets up the details of the transaction, including the amount and line item details.
+        return actions.order.create({
+          purchase_units: [{
+            amount: {
+              value: '0.01'
+            }
+          }]
+        });
+      },
+      onApprove: async (data) => {}
+    }).render('#paypal-button-container');
+  </script> 
 </body>
 
 </html>
