post/integrate-paypal-button-2
Turn the paypal button into component

--- a/app/views/store/products/_product.html.erb
+++ b/app/views/store/products/_product.html.erb
@@ -30,7 +30,10 @@
     <hr>
 
     <!-- TODO: Put the paypal button here -->
-    <div id="paypal-button-container"></div>
-
+    <div class="buynow">
+      <paypal-button
+        refer="paypal-container-<%= product.id.to_s %>"
+      />
+    </div>
   </div>
 </div>
