post/integrate-paypal-button-3
Enable checking out with correct amount and product info

--- a/app/views/store/products/_product.html.erb
+++ b/app/views/store/products/_product.html.erb
@@ -33,6 +33,10 @@
     <div class="buynow">
       <paypal-button
         refer="paypal-container-<%= product.id.to_s %>"
+        currency-code="<%= product.price_currency %>"
+        price-str="<%= product.price.to_s %>"
+        product-description="<%= product.name %>"
+        product-id="<%= product.id %>"        
       />
     </div>
   </div>
