--- a/app/views/store/products/_product.html.erb
+++ b/app/views/store/products/_product.html.erb
@@ -28,26 +28,52 @@
 
     <br>
     <hr>
-    <div class="buynow">
-      <vue-paypal-smart-payment-buttons
-        @paypal-order-created="processing"
-        @paypal-order-approved="finishing"
-        @paypal-order-failed="failing"
-        button-unique-reference="paypal-container-<%= product.id.to_s %>"
-        v-bind:cart="{
-          intent: 'CAPTURE',
-          items: [
-            {
-              reference_id: '<%= product.id %>',
-              description: '<%= product.name %>',
-              amount: {
-                currency_code: '<%= product.price_currency %>',
-                value: <%= product.price.to_s %>
+    <% unless product.is_free? %>    
+      <div class="buynow">
+        <%= form_for([:store, @free_purchase], class: "form-row align-items-center") do |f| %>
+          <%= f.hidden_field :product_id, value: product.to_param  %>
+          <div class="form-row align-items-center">
+            <div class="col-mr-sm-3 my-1">
+              <%= f.label :customer_email, "Email address", class: "sr-only" %>
+
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">
+                    <%= octicon "mail", height: 32,  class: "right left", "aria-label": "hi" %>
+                  </div>
+                </div>
+                <%= f.text_field  :customer_email, placeholder: 'your_email@mail.com', class: "form-control-lg" %>
+
+              </div>
+            </div>
+            <div class="col-auto my-1">
+              <%= f.submit 'Get this free', class: "btn btn-lg btn-primary" %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% else %>
+      <div class="downloadnow">
+        <vue-paypal-smart-payment-buttons
+          @paypal-order-created="processing"
+          @paypal-order-approved="finishing"
+          @paypal-order-failed="failing"
+          button-unique-reference="paypal-container-<%= product.id.to_s %>"
+          v-bind:cart="{
+            intent: 'CAPTURE',
+            items: [
+              {
+                reference_id: '<%= product.id %>',
+                description: '<%= product.name %>',
+                amount: {
+                  currency_code: '<%= product.price_currency %>',
+                  value: <%= product.price.to_s %>
+                }
               }
-            }
-          ]
-        }"
-      />
-    </div>
+            ]
+          }"
+        />
+      </div>
+    <% end %>
   </div>
 </div>
