--- a/app/views/store/purchases/success.html.erb
+++ b/app/views/store/purchases/success.html.erb
@@ -4,7 +4,7 @@
 
   <% if @purchase.is_free %>
     <p class="lead">
-      <strong>Thank you! </strong> Please check your email for further instructions on how to access your purchase.
+      <strong>Thank you, </strong> we have sent the download link to your email
     </p>
   <% else %>
     <p class="lead">
